--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,11 +1,208 @@
 //====================================================================================================
+.header {
+	background: #F2F7FB;
+	// height: 100px;
+	padding: 10px 0;
+
+	&__row {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__social {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+}
+
+.logo {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	@media (max-width:$tablet) {
+		justify-content: center;
+	}
+
+	&__img {
+		width: 157.43px;
+		height: 68px;
+		margin-right: 10px;
+
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+
+	&__text {
+		font-weight: 600;
+		font-size: 12px;
+		line-height: math.div(15, 12);
+		color: rgba(51, 51, 51, 0.44);
+		max-width: 165px;
+	}
+}
+
+.social {
+
+	&__block {
+		display: flex;
+		align-items: center;
+		border-right: 1px solid rgba(0, 0, 0, 0.1);
+		margin: 0 15px 0 0;
+
+		@media (max-width:$tablet) {
+			display: none;
+		}
+	}
+
+	&__block-map {
+		width: 30px;
+		height: 30px;
+		margin-right: 10px;
+
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+
+	&__block-text {
+		font-weight: 400;
+		font-size: 12px;
+		line-height: math.div(15, 12);
+		margin-right: 15px;
+	}
+
+	&__icons {
+		border-right: 1px solid rgba(0, 0, 0, 0.1);
+		margin-right: 15px;
+		padding-right: 15px;
+
+		@media (max-width:$mobile) {
+			display: none;
+		}
+	}
+
+	&__tel {
+		display: flex;
+		flex-direction: column;
+		text-align: left;
+		font-weight: 600;
+		font-size: 12px;
+		line-height: math.div(15, 12);
+
+		@media (max-width:$tablet) {
+			// display: none;
+		}
+
+		a {
+			margin-bottom: 5px;
+			transition: all 0.3s ease 0s;
+
+			&:hover {
+				opacity: 0.8;
+			}
+		}
+	}
+}
+
+
+.headertop {
+	background: #003976;
+	padding: 20px 0;
+	color: $whiteColor;
+
+	@media (max-width:$mobile) {
+		padding: 10px 0;
+	}
+}
+
+.header__menu {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.menu {
+
+	&__body {
+
+		@media (max-width:$tablet) {
+			position: fixed;
+			width: 100%;
+			height: 100vh;
+			top: 88px;
+			left: -100%;
+			overflow: auto;
+			background: $blueColor;
+			box-shadow: none;
+			padding: 40px 20px;
+			z-index: 4;
+			transition: all 0.3s ease 0s;
+
+			.menu-open & {
+				left: 0;
+			}
+
+			&::before {
+				content: '';
+				position: absolute;
+				position: fixed;
+				height: 70px;
+				width: 100%;
+				top: 0px;
+				left: 0;
+				z-index: 50;
+			}
+		}
+	}
+
+
+	&__list {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		@media (max-width:$mobile) {
+			display: flex;
+			flex-direction: column;
+		}
+	}
+
+	&__item {
+		@include adaptiveValue("margin-right", 25, 10);
+
+		&:nth-last-child {
+			margin-right: 0;
+		}
+
+		@media (max-width:$tablet) {
+			margin-bottom: 20px;
+			font-size: 20px;
+			color: $whiteColor;
+		}
+	}
+
+	&__link {
+		transition: all 0.3s ease 0s;
+
+		&:hover {
+			opacity: 0.8;
+		}
+	}
+}
 
 //====================================================================================================
 
 //Burger
-/*
+
 .icon-menu {
 	display: none;
+
 	@media (max-width: $mobile) {
 		display: block;
 		position: relative;
@@ -13,6 +210,7 @@
 		height: rem(18);
 		cursor: pointer;
 		z-index: 5;
+
 		span,
 		&::before,
 		&::after {
@@ -22,28 +220,34 @@
 			position: absolute;
 			width: 100%;
 			height: rem(2);
-			background-color: #000;
+			background-color: #fff;
 		}
+
 		&::before {
 			top: 0;
 		}
+
 		&::after {
 			bottom: 0;
 		}
+
 		span {
 			top: calc(50% - rem(1));
 		}
+
 		.menu-open & {
 			span {
 				width: 0;
 			}
+
 			&::before,
-			&::after {
-			}
+			&::after {}
+
 			&::before {
 				top: calc(50% - rem(1));
 				transform: rotate(-45deg);
 			}
+
 			&::after {
 				bottom: calc(50% - rem(1));
 				transform: rotate(45deg);
@@ -51,4 +255,3 @@
 		}
 	}
 }
-*/
