--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,16 @@
 // Заголовки, общие БЄМ блоки и проче...
+.btn {
+	background: linear-gradient(90deg, #003976 0%, #0062CA 100%);
+	box-shadow: 10px 10px 47px #004DD5;
+	border-radius: 20px;
+	padding: 23px 50px;
+	font-weight: 700;
+	font-size: 17px;
+	text-transform: uppercase;
+	color: $whiteColor;
+	transition: all 0.3s ease 0s;
+
+	&:hover {
+		opacity: 0.8;
+	}
+}
