--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -122,9 +122,12 @@
 }
 
 .header__menu {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	@media (max-width:$mobile) {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
 }
 
 .menu {
