--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,3 +1,137 @@
-//====================================================================================================
+.main {
+	position: relative;
+	@include adaptiveValue("padding-top", 150, 40);
+	@include adaptiveValue("padding-bottom", 150, 40);
 
-//====================================================================================================
+	&__row {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__left {
+		flex: 0 1 48%;
+		z-index: 2;
+		color: $whiteColor;
+
+		@media (max-width:$tablet) {
+			flex: 1 1 100%;
+		}
+	}
+
+	&__left-title {
+		font-weight: 800;
+		@include adaptiveValue("font-size", 45, 30);
+		line-height: math.div(55, 45);
+		margin-bottom: 15px;
+
+		& span {
+			color: #1884F1;
+		}
+	}
+
+	&__left-subtitle {
+		display: block;
+		font-weight: 700;
+		@include adaptiveValue("font-size", 20, 16);
+		line-height: math.div(24, 20);
+		margin-bottom: 25px;
+	}
+
+	&__left-block {}
+
+	&__right {
+		flex: 0 1 48%;
+		z-index: 2;
+
+		@media (max-width:$tablet) {
+			flex: 1 1 100%;
+		}
+
+		img {
+			max-width: 100%;
+		}
+	}
+
+	&__rigt-ibg {}
+
+	&__titletext {
+		content: '';
+		text-align: center;
+		font-weight: 900;
+		font-size: 200px;
+		@include adaptiveValue("font-size", 200, 38);
+		line-height: math.div(244, 200);
+		color: #F2F7FB;
+		position: absolute;
+		width: 100%;
+		// height: 100%;
+		bottom: 0;
+		left: 0;
+		transform: translateY(63px);
+
+		@media (max-width:$mobile) {
+			transform: translateY(12px);
+		}
+	}
+
+	&__imgbg {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+}
+
+.block {
+
+	&__left {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		margin-bottom: 45px;
+
+		@media (max-width:$mobile) {
+			margin-bottom: 20px;
+		}
+	}
+
+	&__left-item {
+		display: flex;
+		align-items: center;
+		flex: 1 1 50%;
+		margin-bottom: 20px;
+
+		@media (max-width:$mobile) {
+			flex: 1 1 100%;
+		}
+
+		img {
+			width: 40px;
+			height: 40px;
+		}
+	}
+
+	&__left-text {
+		display: inline-flex;
+		margin-left: 12px;
+	}
+
+	&__left-btn {
+		@media (max-width:$mobile) {
+			margin-bottom: 10px;
+			display: block;
+		}
+	}
+}
