--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,7 +1,7 @@
 .main {
 	position: relative;
-	@include adaptiveValue("padding-top", 150, 40);
-	@include adaptiveValue("padding-bottom", 150, 40);
+	@include adaptiveValue("padding-top", 150, 30);
+	@include adaptiveValue("padding-bottom", 150, 30);
 
 	&__row {
 		display: flex;
@@ -56,23 +56,44 @@
 
 	&__rigt-ibg {}
 
-	&__titletext {
+	// &__titletext {
+	// 	content: '';
+	// 	text-align: center;
+	// 	font-weight: 900;
+	// 	font-size: 200px;
+	// 	@include adaptiveValue("font-size", 200, 38);
+	// 	line-height: math.div(244, 200);
+	// 	color: #F2F7FB;
+	// 	position: absolute;
+	// 	width: 100%;
+	// 	// height: 100%;
+	// 	bottom: 0;
+	// 	left: 0;
+	// 	transform: translateY(63px);
+
+	// 	@media (max-width:$mobile) {
+	// 		transform: translateY(12px);
+	// 	}
+	// }
+
+	&__titleimg {
 		content: '';
-		text-align: center;
-		font-weight: 900;
-		font-size: 200px;
-		@include adaptiveValue("font-size", 200, 38);
-		line-height: math.div(244, 200);
-		color: #F2F7FB;
 		position: absolute;
 		width: 100%;
 		// height: 100%;
 		bottom: 0;
-		left: 0;
-		transform: translateY(63px);
+		left: 50%;
+		transform: translate(-50%, 22px);
 
-		@media (max-width:$mobile) {
-			transform: translateY(12px);
+		img {
+			max-width: 100%;
+			text-align: center;
+			margin: 0 auto;
+			display: block;
+		}
+
+		@media (max-width:$tablet) {
+			display: none;
 		}
 	}
 
@@ -133,5 +154,536 @@
 			margin-bottom: 10px;
 			display: block;
 		}
+	}
+}
+
+// service ========================================================================================================================================================
+
+.service {
+	@include adaptiveValue("padding-top", 100, 40);
+	@include adaptiveValue("padding-bottom", 80, 40);
+
+	&__row {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__row-card {
+		flex: 0 1 550px;
+		background: #FFFFFF;
+		box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+		border-radius: 10px;
+		transition: all 0.3s ease 0s;
+		margin-bottom: 30px;
+		// margin-right: 30px;
+		// min-height: 389px;
+
+		@media (max-width:$tablet) {
+			flex: 1 1 100%;
+		}
+
+		&:hover {
+			box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+		}
+	}
+
+	&__row-card-img {
+		width: 100%;
+		object-fit: cover;
+
+		img {
+			width: 100%;
+			object-fit: cover;
+		}
+	}
+
+	&__row-card-content {
+		text-align: center;
+		padding: 20px 0;
+
+		@media (max-width:$mobile) {
+			margin: 0 15px;
+		}
+	}
+
+	&__row-card-content-title {
+		font-weight: 800;
+		@include adaptiveValue("font-size", 20, 16);
+		line-height: math.div(24, 20);
+		margin-bottom: 15px;
+	}
+
+	&__row-card-content-text {
+		max-width: 375px;
+		margin: auto;
+		font-weight: 700;
+		@include adaptiveValue("font-size", 15, 14);
+		line-height: math.div(18, 15);
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	&__row-card-content-btn {
+		padding: 15px 30px;
+		font-size: 13px;
+	}
+}
+
+// help ========================================================================================================================================================
+.help {
+	position: relative;
+
+	&__row {
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-end;
+		position: relative;
+	}
+
+	&__row-left {
+		flex: 0 1 auto;
+		margin-right: 40%;
+
+		@media (max-width:$tablet) {
+			margin-right: 0;
+			flex: 1 1 auto;
+		}
+	}
+
+	&__row-left-img {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: -79px;
+		left: 0;
+
+		@media (max-width:$tablet) {
+			display: none;
+		}
+	}
+
+	&__row-right {
+		@include adaptiveValue("padding-top", 100, 40);
+		@include adaptiveValue("padding-bottom", 80, 40);
+		color: $whiteColor;
+	}
+
+	&__row-right-subtitle {
+		font-weight: 800;
+		@include adaptiveValue("font-size", 30, 20);
+		line-height: math.div(37, 30);
+		text-transform: uppercase;
+		margin-bottom: 5px;
+
+		@media (max-width:$mobile) {
+			font-weight: 500;
+		}
+	}
+
+	&__row-right-title {
+		font-weight: 800;
+		@include adaptiveValue("font-size", 50, 30);
+		line-height: math.div(61, 50);
+		text-transform: uppercase;
+		margin-bottom: 15px;
+	}
+
+	&__row-right-text {
+		font-weight: 800;
+		@include adaptiveValue("font-size", 30, 18);
+		line-height: math.div(37, 30);
+		margin-bottom: 20px;
+
+		@media (max-width:$mobile) {
+			font-weight: 500;
+		}
+	}
+
+	&__row-right-btn {
+		padding: 20px 30px;
+		font-weight: 700;
+		@include adaptiveValue("font-size", 17, 14);
+		line-height: math.div(21, 17);
+		text-transform: uppercase;
+	}
+
+	&__img {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
+
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
+
+// about ========================================================================================================================================================
+.about {
+	@include adaptiveValue("padding-top", 100, 40);
+	@include adaptiveValue("padding-bottom", 80, 40);
+
+	&__row {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		@include adaptiveValue("margin-bottom", 60, 40);
+	}
+
+	&__left {
+		flex: 0 1 50%;
+
+		@media (max-width:$tablet) {
+			flex: 1 1 100%;
+		}
+	}
+
+	&__left-text {
+		font-style: normal;
+		font-weight: 600;
+		@include adaptiveValue("font-size", 16, 14);
+		line-height: math.div(20, 16);
+
+		p {
+			margin-bottom: 15px;
+
+			:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+
+	&__right {}
+
+	&__right-img {
+		display: block;
+		max-width: 570px;
+		margin: 0 auto;
+		text-align: center;
+
+		img {
+			max-width: 100%;
+		}
+	}
+
+	&__block {
+		border: 1px solid rgba(0, 0, 0, 0.2);
+		border-radius: 20px;
+		display: flex;
+		align-items: flex-start;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__block-card {
+		flex: 0 1 33.333%;
+		padding: 25px 20px;
+		text-align: left;
+
+		@media (max-width:$tablet) {
+			flex: 0 1 50%;
+		}
+
+		@media (max-width:$mobile) {
+			flex: 1 1 100%;
+		}
+	}
+}
+
+.block {
+	@include adaptiveValue("margin-top", 60, 30);
+
+	&__card {
+
+		&-one {
+			border-right: 1px solid rgba(0, 0, 0, 0.2);
+			border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+
+			@media (max-width:$mobile) {
+				border-right: none;
+			}
+		}
+
+		&-two {
+			border-right: 1px solid rgba(0, 0, 0, 0.2);
+			border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+
+			@media (max-width:$tablet) {
+				border-right: none;
+			}
+		}
+
+		&-fo {
+			border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+
+			@media (max-width:$tablet) {
+				border-right: 1px solid rgba(0, 0, 0, 0.2);
+			}
+
+			@media (max-width:$mobile) {
+				border-right: none;
+			}
+		}
+
+		&-free {
+			border-right: 1px solid rgba(0, 0, 0, 0.2);
+
+			@media (max-width:$tablet) {
+				border-right: none;
+				border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+			}
+		}
+
+		&-five {
+			border-right: 1px solid rgba(0, 0, 0, 0.2);
+
+			@media (max-width:$mobile) {
+				border-right: none;
+				border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+			}
+		}
+	}
+
+	&__card-img {
+		width: 100px;
+		height: 100px;
+		margin-bottom: 15px;
+
+		@media (max-width:$mobile) {
+			width: 80px;
+		}
+
+		img {
+			width: 100%;
+		}
+	}
+
+	&__card-title {
+		font-weight: 700;
+		@include adaptiveValue("font-size", 25, 16);
+		line-height: math.div(30, 25);
+		text-transform: uppercase;
+		color: #000000;
+		margin-bottom: 10px;
+		min-height: 60px;
+
+		@media (max-width:$mobile) {
+			min-height: auto;
+		}
+	}
+
+	&__card-text {
+		font-weight: 600;
+		font-size: 14px;
+		line-height: math.div(17, 14);
+		color: #000000;
+		height: 51px;
+	}
+}
+
+//========================================================================================================================================================
+.work {
+
+	&__row {}
+
+	&__slider {}
+
+	&__wrapper {}
+
+	&__slide {
+		display: flex;
+		justify-content: center;
+	}
+
+	&__slide-img {
+		width: 370px;
+		height: 486px;
+
+		img {
+			width: 100%;
+		}
+	}
+}
+
+.swiper {
+	overflow: inherit !important;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+	width: 35px !important;
+	height: 35px !important;
+	background: #0062CA;
+	border-radius: 50%;
+	padding: 10px !important;
+
+	&::after {
+		color: $whiteColor;
+		font-size: 13px !important;
+	}
+}
+
+
+
+// repair ========================================================================================================================================================
+.repair {
+	@include adaptiveValue("margin-top", 180, 30);
+
+	&__container {
+		position: relative;
+	}
+
+	&__row {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 50px 30px;
+		flex-wrap: wrap;
+
+		@media (max-width:$mobile) {
+			padding: 30px 20px;
+		}
+	}
+
+	&__left {
+		flex: 0 1 30%;
+	}
+
+	&__left-img {
+		position: absolute;
+		max-width: 466px;
+		bottom: 0;
+		left: 0;
+
+		@media (max-width:$tablet) {
+			display: none;
+		}
+
+		img {
+			width: 100%;
+			border-radius: 20px;
+		}
+	}
+
+	&__right {
+		flex: 0 1 70%;
+		position: relative;
+		color: $whiteColor;
+		margin-left: 39%;
+
+		@media (max-width:$tablet) {
+			margin-left: 0;
+			flex: 1 1 auto;
+		}
+	}
+
+	&__right-title {
+		font-weight: 700;
+		@include adaptiveValue("font-size", 40, 22);
+		line-height: math.div(49, 40);
+		margin-bottom: 15px;
+	}
+
+	&__right-subtitle {
+		font-weight: 700;
+		@include adaptiveValue("font-size", 25, 18);
+		line-height: math.div(30, 25);
+		color: #0062CA;
+		margin-bottom: 25px;
+	}
+
+	&__right-items {
+		display: flex;
+		align-items: left;
+		flex-direction: column;
+	}
+
+	&__input {
+		background: #D9D9D9;
+		border-radius: 10px;
+		height: 50px;
+		padding: 16px 22px;
+		width: 313px;
+		margin-right: 5px;
+
+		@media (max-width:$mobile) {
+			margin-bottom: 20px;
+			display: flex;
+			justify-content: center;
+			width: 100%;
+		}
+	}
+
+	&__right-form {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__right-btn {
+		padding: 16px 50px;
+		background: linear-gradient(90deg, #003976 0%, #0062CA 100%);
+		box-shadow: 10px 10px 30px rgba(0, 77, 213, 0.4);
+		border-radius: 10px;
+
+		@media (max-width:$mobile) {
+			width: 100%;
+			text-align: center;
+			display: flex;
+			justify-content: center;
+			font-size: 14px;
+			letter-spacing: 0.5;
+		}
+	}
+
+	&__bg {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		z-index: -1;
+
+		img {
+			width: 100%;
+			height: 100%;
+			border-radius: 20px;
+		}
+	}
+}
+
+.right-items {
+
+	&__list {
+		display: flex;
+		align-items: center;
+		margin-bottom: 20px;
+		flex-wrap: wrap;
+
+		img {
+			width: 30px;
+			height: 30px;
+			margin-right: 10px;
+
+			@media (max-width:$mobile) {
+				margin-bottom: 10px;
+			}
+		}
+	}
+
+	&__list-text {
+		font-weight: 600;
+		@include adaptiveValue("font-size", 16, 14);
+		line-height: math.div(20, 16);
 	}
 }
